--- a/school_garden/templates/base.html
+++ b/school_garden/templates/base.html
@@ -5,6 +5,7 @@
         <title>{% block title %}School Garden Program{% endblock %}</title>
     </head>
     <body>
+        {% include 'navbar.html' %}
         <main>
             {% block content %}
             {% endblock %}
