--- a/school_garden/templates/login.html
+++ b/school_garden/templates/login.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 
-{% block title %}About{% endblock %}
+{% block title %}Login{% endblock %}
 
 
 {% block content %}
-<h1>About Page</h1>
+<h1>Login Page</h1>
 {% endblock %}
