--- a/school_garden/templates/profile.html
+++ b/school_garden/templates/profile.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 
-{% block title %}About{% endblock %}
+{% block title %}Profile{% endblock %}
 
 
 {% block content %}
-<h1>About Page</h1>
+<h1>Profile Page</h1>
 {% endblock %}
