--- a/school_garden/templates/index.html
+++ b/school_garden/templates/index.html
@@ -5,5 +5,10 @@
 
 
 {% block content %}
+<div class="section">
+<img class="main-image" src="https://static.wixstatic.com/media/84770f_a499f4cb455b41b08e6c89929b1f3427~mv2_d_2707_2120_s_2.jpg/v1/fill/w_1292,h_1528,al_c,q_90,usm_0.66_1.00_0.01,enc_auto/84770f_a499f4cb455b41b08e6c89929b1f3427~mv2_d_2707_2120_s_2.jpg">
 <h1>School Garden Program</h1>
+<h4>Edible Learning Space</h4>
+<button class="button">Learn More</button>
+</div>
 {% endblock %}
