--- a/school_garden/templates/base.html
+++ b/school_garden/templates/base.html
@@ -1,7 +1,11 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
         <title>{% block title %}School Garden Program{% endblock %}</title>
     </head>
     <body>
