--- a/school_garden/templates/navbar.html
+++ b/school_garden/templates/navbar.html
@@ -1,20 +1,34 @@
-<nav>
-    {% url 'index' as index_url %}
-    <span>{% if request.path == index_url %}Home{% else %}<a href="{% url 'index' %}">Home</a>{% endif %}</span>
-    {% url 'school gardens' as schoolgardens_url %}
-    <span>{% if request.path == info_url %}Info{% else %}<a href="{% url 'school gardens' %}">Info</a>{% endif %}</span>
-    {% url 'contact' as contact_url %}
-    <span>{% if request.path == contact_url %}Contact{% else %}<a href="{% url 'contact' %}">Contact</a>{% endif %}</span>
-    {% url 'about' as about_url %}
-    <span>{% if request.path == about_url %}About{% else %}<a href="{% url 'about' %}">About</a>{% endif %}</span>
-
-    <span style="float:right">
-        {% if user.is_authenticated %}
-        {% url 'profile' as profile_url %}
-        <span>Welcome {% if request.path == profile_url %}{% else %}<a href="{{ profile_url }}">{{user.username}}</a>{% endif %}!</span>
-        <span><a href="{% url 'logout' %}">Logout</a></span>
-        {% else %}
-            <span><a href="{% url 'login' %}">Login</a></span>
-        {% endif %}
-    </span>
+<nav class="navbar is-expanded" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+      <a class="navbar-item" href="https://bulma.io">
+        <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
+      </a>
+      <div id="navbarBasicExample" class="navbar-menu">
+        <div class="navbar-start">
+          <a class="navbar-item">
+            Home
+          </a>
+          <a class="navbar-item">
+            About
+          </a>
+          <a class="navbar-item">
+            School Gardens
+          </a>
+          <a class="navbar-item">
+            Contact
+          </a>
+          <div class="navbar-end">
+            <div class="navbar-item">
+              <div class="buttons">
+                <a class="button is-primary">
+                  <strong>Sign up</strong>
+                </a>
+                <a class="button is-light">
+                  Log in
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
 </nav>
