--- a/school_garden/templates/about.html
+++ b/school_garden/templates/about.html
@@ -9,6 +9,15 @@
     <img class='goals-image'src="https://static.wixstatic.com/media/e4f166_a322a7563c8f4efba38aebd153dd2c07~mv2_d_4152_4152_s_4_2.png/v1/crop/x_1244,y_1004,w_2503,h_3043/fill/w_230,h_270,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/plant.png">
 </div>
     <h1 class="goals-text">Our Goals</h1>
-    <p class="goals-paragraph">We strive to provide a learning network with the goal of growing,
-        sustaining and elevating a movement of equitable garden-based education.</p>
+    <p class="goals-paragraph">
+        The school garden offers a place to enrich teaching efforts with powerful hands-on experiences that make learning come alive.
+Why plant a school garden? School gardens have entered the national spotlight as an effective way to promote life-long healthy eating habits and connect students to the natural world.  Gardening provides educators with opportunities to enhance student education through practical, reality-based learning. Goals of school garden programs often include:
+        <br>-Increased consumption of fruits and vegetables
+       <br> -Improvement in attitudes towards fruits and vegetables
+        <br>-Improvement in science achievement scores
+       <br> - Improvement in social skills and behaviors
+        <br>-Improvement in environmental attitudes and instillation of respect for nature
+       <br> -Positive impact on student achievement and behavior </p>
+
+
 {% endblock %}
