--- a/school_garden/templates/accounts/profile.html
+++ b/school_garden/templates/accounts/profile.html
@@ -5,5 +5,7 @@
 
 
 {% block content %}
-<h1>Profile Page</h1>
+<div class="profile-title">
+<h1>{{user.username}}, Profile:</h1>
+</div>
 {% endblock %}
