--- a/school_garden/templates/contact.html
+++ b/school_garden/templates/contact.html
@@ -5,8 +5,27 @@
 
 
 {% block content %}
-<h1>Contact Us</h1>
 <div class="contact-image">
-    <img class='image-contact'src="https://static.wixstatic.com/media/e4f166_d36bb5b31ed84d8c94926f151691fc34~mv2_d_4152_4152_s_4_2.png/v1/crop/x_717,y_568,w_3312,h_3509/fill/w_268,h_284,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/wheelbarrow.png">
+    <img id='contact'src="https://static.wixstatic.com/media/e4f166_d36bb5b31ed84d8c94926f151691fc34~mv2_d_4152_4152_s_4_2.png/v1/crop/x_717,y_568,w_3312,h_3509/fill/w_268,h_284,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/wheelbarrow.png">
 </div>
+<div class="contact-title">
+<h1>Contact Us</h1>
+<div class="field">
+    <label class="label">Name</label>
+    <div class="control">
+      <input class="input" type="text" placeholder="Text input">
+    </div>
+  </div>
+  
+  <div class="field">
+    <label class="label">Message</label>
+    <div class="control">
+      <textarea class="textarea" placeholder="Text area"></textarea>
+    </div>
+  </div>
+
+  <div class="field">
+    <div class="control">
+      <button class="button">Submit</button>
+    </div>
 {% endblock %}
