--- a/school_garden/templates/info.html
+++ b/school_garden/templates/info.html
@@ -9,6 +9,7 @@
     <img class='info-image'src="https://static.wixstatic.com/media/e4f166_abc52a43de4a47ca8e56093c2a810ed3~mv2_d_4152_4152_s_4_2.png/v1/crop/x_626,y_967,w_3526,h_2645/fill/w_248,h_186,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/funel.png">
 </div>
 <h1 class="school-gardens-title">School Gardens</h1>
+<div class="all-photos">
 <div class="image-gallary">
     <img class='image-1'src="https://static.wixstatic.com/media/e4f166_b8ec10f1c3114f07842d50051c474d94~mv2_d_4480_6720_s_4_2.jpg/v1/crop/x_0,y_740,w_4480,h_5240/fill/w_566,h_662,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/GettyImages-843199070_new.jpg">
 </div>
@@ -26,6 +27,13 @@
 </div>
 <div class="image-gallary">
     <img class='image-6'src="https://static.wixstatic.com/media/84770f_9e00b263ce0141f58859c2fe34e2a63d~mv2.jpg/v1/fit/w_1603,h_727,q_90/84770f_9e00b263ce0141f58859c2fe34e2a63d~mv2.webp">
+</div>
+<div class="image-gallary">
+    <img class='image-6'src="https://static.wixstatic.com/media/84770f_9e00b263ce0141f58859c2fe34e2a63d~mv2.jpg/v1/fit/w_1603,h_727,q_90/84770f_9e00b263ce0141f58859c2fe34e2a63d~mv2.webp">
+</div>
+<div class="image-gallary">
+    <img class='image-6'src="https://static.wixstatic.com/media/84770f_9e00b263ce0141f58859c2fe34e2a63d~mv2.jpg/v1/fit/w_1603,h_727,q_90/84770f_9e00b263ce0141f58859c2fe34e2a63d~mv2.webp">
+</div>
 </div>
 
 {% endblock %}
