--- a/school_garden/templates/index.html
+++ b/school_garden/templates/index.html
@@ -19,7 +19,7 @@
 <div id="learning-text">
 <h4>Edible Learning Space</h4>
 </div>
-<a href="{% url 'about' %}"><button class="button" id="more-button">Learn More</button></a>
+<a href="{% url 'learnmore' %}"><button class="button" id="more-button">Learn More</button></a>
 </div>
 </div>
 
