--- a/school_garden/templates/accounts/profile.html
+++ b/school_garden/templates/accounts/profile.html
@@ -15,6 +15,9 @@
     <div class="schedule">
     <h4 id="h4">Your Current Volunteer Schedule:</h4>
     </div>
+    <table></table>
+
+   
     <!-- <div class="input-schedule">
     <input type="text" placeholder="Enter Name">
     </div>
