--- a/school_garden/templates/contact.html
+++ b/school_garden/templates/contact.html
@@ -24,8 +24,5 @@
     </div>
   </div>
 
-  <div class="field">
-    <div class="control">
-      <button class="button">Submit</button>
-    </div>
+  <a href="{% url 'thankyou' %}"><button class="button" id="thankyou-button">Submit</button></a>
 {% endblock %}
