--- a/school_garden/static/main.css
+++ b/school_garden/static/main.css
@@ -220,6 +220,6 @@ margin: 10px;
     text-align: center;
     margin-top: 40px;
 }
-.volunteer-button{
-    
+.schedule-title{
+    font-size: 30px;
 }
