--- a/school_garden/templates/create.html
+++ b/school_garden/templates/create.html
@@ -1,16 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<form method="POST" enctype="multipart/form-data">
-    <!-- Security token -->
-    {% csrf_token %}
- 
-    <!-- Using the formset -->
-   <p class="volunteer-form"> {{ volunteer_form }}
-   <input type="date">
-   </p>
-     <center>
-    <input class='button' type="submit" value="Submit">
-    </center>
+<form action="" method=POST>
+  {% csrf_token %}
+  {{ form.as_table }}
+  <input type="submit" value="Submit">
 </form>
+
 {% endblock %}
