--- a/school_garden/templates/navbar.html
+++ b/school_garden/templates/navbar.html
@@ -6,9 +6,9 @@
       <a id="navbar-item" href="/">Greenify</a>
       </div>
       <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
-        <span aria-hidden="true">About</span>
-        <span aria-hidden="true">School Gardens</span>
-        <span aria-hidden="true">Contact</span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
       </a>
     </div>
     <div class="navbar-menu navbar-end">
